--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
         </div>
     </section>
 
-    <div class="black-bar">
-        <img src="images/shop.png" alt="Shop" class="footer-icon">
-        <img src="images/bank.png" alt="Bank" class="footer-icon">
-        <img src="images/person.png" alt="User" class="footer-icon">
-    </div>
+    <footer>
+        <div class="black-bar">
+            <img src="images/shop.png" alt="Shop" class="footer-icon">
+            <img src="images/bank.png" alt="Bank" class="footer-icon">
+            <img src="images/person.png" alt="User" class="footer-icon">
+        </div>
+    </footer>
 
     <script>
         function filterProducts() {
