--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
 
             products.forEach(product => {
                 const productName = product.getAttribute('data-name').toLowerCase();
-                if (productName.includes(query)) {
-                    product.style.display = 'block';
-                } else {
-                    product.style.display = 'none';
-                }
+                product.style.display = productName.includes(query) ? 'block' : 'none';
             });
         }
     </script>
