--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
 
     <footer>
         <div class="black-bar">
-            <img src="images/shop.png" alt="Shop" class="footer-icon">
-            <img src="images/bank.png" alt="Bank" class="footer-icon">
-            <img src="images/person.png" alt="User" class="footer-icon">
+            <div class="footer-icon">
+                <img src="images/home.png" alt="Home">
+            </div>
+            <div class="footer-icon">
+                <img src="images/rentals.png" alt="Rentals">
+            </div>
+            <div class="footer-icon">
+                <img src="images/profile.png" alt="Profile">
+            </div>
         </div>
     </footer>
 
