--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Everent - Rent Cool Products</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:700" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,8 +14,9 @@
             <img src="images/logo-icon.png" alt="Logo Icon" class="logo-icon">
             <h1>Everent</h1>
         </div>
-        <div class="search">
-            <input type="text" placeholder="Search products..." id="searchBar" oninput="filterProducts()">
+        <div class="container">
+            <input type="text" placeholder="Search..." id="searchBar">
+            <div class="search" onclick="filterProducts()"></div>
         </div>
     </header>
 
