--- a/index.html
+++ b/index.html
@@ -6,39 +6,38 @@
     <title>Rental Website</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Evevent:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <h1>Rental Services</h1>
+            <h1>EVERENT</h1>
             <input type="text" class="searchbar" placeholder="Search...">
         </nav>
     </header>
     
     <div class="products-container">
         <div class="product-box">
-            <i class="fas fa-car"></i>
+            <img src="icon1.png" alt="Product 1" class="product-icon">
             <h2>Product 1</h2>
-            <p>Description of Product 1.</p>
+            <p class="product-description">High-quality rental product.</p>
             <div class="price">Price: $10/day</div>
         </div>
         <div class="product-box">
-            <i class="fas fa-bicycle"></i>
+            <img src="icon2.png" alt="Product 2" class="product-icon">
             <h2>Product 2</h2>
-            <p>Description of Product 2.</p>
+            <p class="product-description">Reliable and affordable.</p>
             <div class="price">Price: $15/day</div>
         </div>
         <div class="product-box">
-            <i class="fas fa-camera"></i>
+            <img src="icon3.png" alt="Product 3" class="product-icon">
             <h2>Product 3</h2>
-            <p>Description of Product 3.</p>
+            <p class="product-description">Perfect for your needs.</p>
             <div class="price">Price: $20/day</div>
         </div>
         <div class="product-box">
-            <i class="fas fa-laptop"></i>
+            <img src="icon4.png" alt="Product 4" class="product-icon">
             <h2>Product 4</h2>
-            <p>Description of Product 4.</p>
+            <p class="product-description">Great value and service.</p>
             <div class="price">Price: $25/day</div>
         </div>
     </div>
