--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <title>Rental Website</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Evevent:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <h1>EVERENT</h1>
-            <form action="">
-                <input type="search" autofocus required placeholder="Search...">
-                <i class="fa fa-search"></i>
-                <button type="button" onclick="clearInput()">Clear</button>
-            </form>
+            <input type="text" class="searchbar" placeholder="Search...">
         </nav>
     </header>
     
@@ -52,7 +47,5 @@
             <p>Prices are subject to change.</p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
