--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <img src="icon2.png" alt="Product 2" class="product-icon">
             <h2>Product 2</h2>
             <p class="product-description">Reliable and affordable.</p>
-            <div class="price">Price: $15/day</div>
+            <div class="price">Price: CHF15/day</div>
         </div>
         <div class="product-box">
             <img src="icon3.png" alt="Product 3" class="product-icon">
             <h2>Product 3</h2>
             <p class="product-description">Perfect for your needs.</p>
-            <div class="price">Price: $20/day</div>
+            <div class="price">Price: CHF20/day</div>
         </div>
         <div class="product-box">
             <img src="icon4.png" alt="Product 4" class="product-icon">
             <h2>Product 4</h2>
             <p class="product-description">Great value and service.</p>
-            <div class="price">Price: $25/day</div>
+            <div class="price">Price: CHF25/day</div>
         </div>
     </div>
     
