--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="products-container">
         <div class="product-box">
-            <img src="icon1.png" alt="Product 1" class="product-icon">
+            <img src="shop.png" alt="Product 1" class="product-icon">
             <h2>Product 1</h2>
             <p class="product-description">High-quality rental product.</p>
             <div class="price">Price: $10/day</div>
