--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="images/shop.png" alt="Product 1" class="product-icon">
             <h2>Product 1</h2>
             <p class="product-description">High-quality rental product.</p>
-            <div class="price">Price: $10/day</div>
+            <div class="price">Price: CHF10/day</div>
         </div>
         <div class="product-box">
             <img src="icon2.png" alt="Product 2" class="product-icon">
