--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2>Product 1</h2>
             <p class="product-description">High-quality rental product.</p>
             <div class="price">Price: CHF10/day</div>
-            <div class="uses">Utilizzi: 1/day</div>
+            <div class="uses">Utilizzi: 1</div>
         </div>
         <div class="product-box">
             <img src="icon2.png" alt="Product 2" class="product-icon">
