--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <footer class="footer">
-        <div class="black-bar">
+        <div class="orange-bar">
             <p>Prices are subject to change.</p>
         </div>
     </footer>
