--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header>
         <nav class="navbar">
             <h1>EVERENT</h1>
+            <div class="balance">
+                <span id="moneyValue">$0.00</span> <!-- Money balance display -->
+            </div>
+        </nav>
     </header>
     
-    <div class="products-container">
+      <div class="products-container">
         <div class="product-box">
             <img src="images/shop.png" alt="Product 1" class="product-icon">
             <h2>Product 1</h2>
@@ -46,5 +50,6 @@
             <p>Prices are subject to change.</p>
         </div>
     </footer>
+<script src="script.js"></script>
 </body>
 </html>
