--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <h1>EVERENT</h1>
             <div class="balance">
-                <span id="moneyValue">$0.00</span> <!-- Money balance display -->
+                <span id="moneyValue">CHF 0.00</span> <!-- Money balance display -->
             </div>
         </nav>
     </header>
