--- a/index.html
+++ b/index.html
@@ -18,33 +18,40 @@
     </header>
     
       <div class="products-container">
-        <div class="product-box">
-            <img src="images/shop.png" alt="Product 1" class="product-icon">
-            <h2>Product 1</h2>
-            <p class="product-description">High-quality rental product.</p>
-            <div class="price">Price: CHF10/day</div>
-            <div class="uses">Utilizzi: 1</div>
-        </div>
-        <div class="product-box">
-            <img src="icon2.png" alt="Product 2" class="product-icon">
-            <h2>Product 2</h2>
-            <p class="product-description">Reliable and affordable.</p>
-            <div class="price">Price: CHF15/day</div>
-        </div>
-        <div class="product-box">
-            <img src="icon3.png" alt="Product 3" class="product-icon">
-            <h2>Product 3</h2>
-            <p class="product-description">Perfect for your needs.</p>
-            <div class="price">Price: CHF20/day</div>
-        </div>
-        <div class="product-box">
-            <img src="icon4.png" alt="Product 4" class="product-icon">
-            <h2>Product 4</h2>
-            <p class="product-description">Great value and service.</p>
-            <div class="price">Price: CHF25/day</div>
-        </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Product 1" class="product-icon">
+        <h2>Product 1</h2>
+        <p class="product-description">High-quality rental product.</p>
+        <div class="price">Price: CHF10/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
     </div>
-    
+    <div class="product-box">
+        <img src="icon2.png" alt="Product 2" class="product-icon">
+        <h2>Product 2</h2>
+        <p class="product-description">Reliable and affordable.</p>
+        <div class="price">Price: CHF15/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
+    </div>
+    <div class="product-box">
+        <img src="icon3.png" alt="Product 3" class="product-icon">
+        <h2>Product 3</h2>
+        <p class="product-description">Perfect for your needs.</p>
+        <div class="price">Price: CHF20/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
+    </div>
+    <div class="product-box">
+        <img src="icon4.png" alt="Product 4" class="product-icon">
+        <h2>Product 4</h2>
+        <p class="product-description">Great value and service.</p>
+        <div class="price">Price: CHF25/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
+    </div>
+</div>
+
     <footer class="footer">
         <div class="orange-bar">
             <p>Prices are subject to change.</p>
