--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="product-description">High-quality rental product.</p>
         <div class="price">Price: CHF10/day</div>
         <div class="uses">Utilizzi: 1</div>
-        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
+        <a href="product1.html" class="rent-button">Rent Now</a>
     </div>
     <div class="product-box">
         <img src="icon2.png" alt="Product 2" class="product-icon">
