--- a/product1.html
+++ b/product1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product 1</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- For calendar icon -->
 </head>
 <body>
@@ -59,6 +59,6 @@
         <button class="rent-button">Rent Now</button>
     </div>
 
-    <script src="script.js"></script> <!-- Link to your JS file -->
+    <script src="scripts.js"></script> <!-- Link to your JS file -->
 </body>
 </html>
