--- a/product1.html
+++ b/product1.html
@@ -13,7 +13,9 @@
         
         <div class="product-content">
             <div class="image-gallery">
-                <img id="main-image" src="images/shop.png" alt="Product Image">
+                <div class="image-box">
+                    <img id="main-image" src="images/shop.png" alt="Product Image">
+                </div>
                 <div class="thumbnail-container">
                     <img class="thumbnail" src="images/shop.png" alt="Product Image 1" onclick="changeImage(this)">
                     <img class="thumbnail" src="images/shop2.png" alt="Product Image 2" onclick="changeImage(this)">
@@ -53,10 +55,9 @@
                         <p class="amount">CHF 0.00</p>
                     </div>
                 </div>
+                <button class="rent-button">Rent Now</button>
             </div>
         </div>
-
-        <button class="rent-button">Rent Now</button>
     </div>
 
     <script src="scripts.js"></script> <!-- Link to your JS file -->
