--- a/product1.html
+++ b/product1.html
@@ -36,23 +36,48 @@
                         <span class="price-period">For 30+ days</span>
                     </div>
                 </div>
-                <div class="calendar">
+                
+                <div class="calendar-container">
                     <h3>Availability</h3>
-                    <div class="calendar-grid">
-                        <!-- Example calendar -->
-                        <div class="calendar-day occupied">1</div>
-                        <div class="calendar-day free">2</div>
-                        <div class="calendar-day free">3</div>
-                        <div class="calendar-day occupied">4</div>
-                        <div class="calendar-day free">5</div>
-                        <div class="calendar-day free">6</div>
-                        <div class="calendar-day occupied">7</div>
-                        <div class="calendar-day free">8</div>
-                        <div class="calendar-day free">9</div>
-                        <div class="calendar-day occupied">10</div>
-                        <!-- Add more days as needed -->
+                    <div class="container">
+                        <div class="calander">
+                            <div class="year">
+                                <button> &#9664; </button>
+                                <h2>2025</h2>
+                                <button> &#9654; </button>
+                            </div>
+                            <div class="month">
+                                <button> &#9664; </button>
+                                <h2>January</h2>
+                                <button> &#9654; </button>
+                            </div>
+                            <div class="week">
+                                <div class="weekday">S</div>
+                                <div class="weekday">M</div>
+                                <div class="weekday">T</div>
+                                <div class="weekday">W</div>
+                                <div class="weekday">Th</div>
+                                <div class="weekday">F</div>
+                                <div class="weekday">Sa</div>
+                            </div>
+                            <div class="days">
+                                <div class="day occupied">1</div>
+                                <div class="day free">2</div>
+                                <div class="day free">3</div>
+                                <div class="day occupied">4</div>
+                                <div class="day free">5</div>
+                                <div class="day free">6</div>
+                                <div class="day occupied">7</div>
+                                <div class="day free">8</div>
+                                <div class="day free">9</div>
+                                <div class="day occupied">10</div>
+                                <!-- Add more days as needed -->
+                            </div>
+                        </div>
+                        <div class="output">Selected Date: <span id="selected-date">None</span></div>
                     </div>
                 </div>
+
                 <button class="btn btn--link">Discount code</button>
                 <button class="rent-button">Rent Now</button>
                 <div class="booking-overview">
