--- a/index.html
+++ b/index.html
@@ -52,11 +52,26 @@
     </div>
 </div>
 
-    <footer class="footer">
-        <div class="orange-bar">
-            <p>Prices are subject to change.</p>
-        </div>
-    </footer>
+   <footer class="footer">
+    <div class="icon-container">
+        <a href="index.html">
+            <img src="Home.png" alt="Home" class="footer-icon">
+        </a>
+        <a href="search.html">
+            <img src="Search.png" alt="Search" class="footer-icon">
+        </a>
+        <a href="create.html">
+            <img src="Create.png" alt="Create" class="footer-icon">
+        </a>
+        <a href="bank.html">
+            <img src="bank.png" alt="Bank" class="footer-icon">
+        </a>
+        <a href="account.html">
+            <img src="account.png" alt="Account" class="footer-icon">
+        </a>
+    </div>
+</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
