--- a/index.html
+++ b/index.html
@@ -12,66 +12,66 @@
         <nav class="navbar">
             <h1>EVERENT</h1>
             <div class="balance">
-                <span id="moneyValue">CHF 0.00</span> <!-- Money balance display -->
+                <span id="moneyValue">CHF 0.00</span>
             </div>
         </nav>
     </header>
     
-      <div class="products-container">
-    <div class="product-box">
-        <img src="images/shop.png" alt="Product 1" class="product-icon">
-        <h2>Product 1</h2>
-        <p class="product-description">High-quality rental product.</p>
-        <div class="price">Price: CHF10/day</div>
-        <div class="uses">Utilizzi: 1</div>
-        <a href="product1.html" class="rent-button">Rent Now</a>
+    <div class="products-container">
+        <div class="product-box">
+            <img src="images/shop.png" alt="Product 1" class="product-icon">
+            <h2>Product 1</h2>
+            <p class="product-description">High-quality rental product.</p>
+            <div class="price">Price: CHF10/day</div>
+            <div class="uses">Utilizzi: 1</div>
+            <a href="product1.html" class="rent-button">Rent Now</a>
+        </div>
+        <div class="product-box">
+            <img src="icon2.png" alt="Product 2" class="product-icon">
+            <h2>Product 2</h2>
+            <p class="product-description">Reliable and affordable.</p>
+            <div class="price">Price: CHF15/day</div>
+            <div class="uses">Utilizzi: 1</div>
+            <a href="product2.html" class="rent-button">Rent Now</a>
+        </div>
+        <div class="product-box">
+            <img src="icon3.png" alt="Product 3" class="product-icon">
+            <h2>Product 3</h2>
+            <p class="product-description">Perfect for your needs.</p>
+            <div class="price">Price: CHF20/day</div>
+            <div class="uses">Utilizzi: 1</div>
+            <a href="product3.html" class="rent-button">Rent Now</a>
+        </div>
+        <div class="product-box">
+            <img src="icon4.png" alt="Product 4" class="product-icon">
+            <h2>Product 4</h2>
+            <p class="product-description">Great value and service.</p>
+            <div class="price">Price: CHF25/day</div>
+            <div class="uses">Utilizzi: 1</div>
+            <a href="product4.html" class="rent-button">Rent Now</a>
+        </div>
     </div>
-    <div class="product-box">
-        <img src="icon2.png" alt="Product 2" class="product-icon">
-        <h2>Product 2</h2>
-        <p class="product-description">Reliable and affordable.</p>
-        <div class="price">Price: CHF15/day</div>
-        <div class="uses">Utilizzi: 1</div>
-        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
-    </div>
-    <div class="product-box">
-        <img src="icon3.png" alt="Product 3" class="product-icon">
-        <h2>Product 3</h2>
-        <p class="product-description">Perfect for your needs.</p>
-        <div class="price">Price: CHF20/day</div>
-        <div class="uses">Utilizzi: 1</div>
-        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
-    </div>
-    <div class="product-box">
-        <img src="icon4.png" alt="Product 4" class="product-icon">
-        <h2>Product 4</h2>
-        <p class="product-description">Great value and service.</p>
-        <div class="price">Price: CHF25/day</div>
-        <div class="uses">Utilizzi: 1</div>
-        <button class="rent-button">Rent Now</button> <!-- Rent Now Button -->
-    </div>
-</div>
 
-   <footer class="footer">
-    <div class="icon-container">
-        <a href="index.html">
-            <img src="Home.png" alt="Home" class="footer-icon">
-        </a>
-        <a href="search.html">
-            <img src="Search.png" alt="Search" class="footer-icon">
-        </a>
-        <a href="create.html">
-            <img src="Create.png" alt="Create" class="footer-icon">
-        </a>
-        <a href="bank.html">
-            <img src="bank.png" alt="Bank" class="footer-icon">
-        </a>
-        <a href="account.html">
-            <img src="account.png" alt="Account" class="footer-icon">
-        </a>
-    </div>
-</footer>
+    <footer class="footer">
+        <div class="icon-container">
+            <a href="index.html">
+                <img src="Home.png" alt="Home" class="footer-icon">
+            </a>
+            <a href="search.html">
+                <img src="Search.png" alt="Search" class="footer-icon">
+            </a>
+            <a href="create.html">
+                <img src="Create.png" alt="Create" class="footer-icon">
+            </a>
+            <a href="bank.html">
+                <img src="bank.png" alt="Bank" class="footer-icon">
+            </a>
+            <a href="account.html">
+                <img src="account.png" alt="Account" class="footer-icon">
+            </a>
+        </div>
+    </footer>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
