--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
         <nav class="navbar">
             <h1>EVERENT</h1>
             <div class="balance">
-                <span id="moneyValue">CHF 0.00</span>
+                <span id="moneyValue">CHF 0.00</span> <!-- Money balance display -->
             </div>
         </nav>
     </header>
     
     <div class="products-container">
         <div class="product-box">
-            <img src="images/shop.png" alt="Product 1" class="product-icon">
+            <img src="images/shop.png" alt="High-quality rental product" class="product-icon">
             <h2>Product 1</h2>
             <p class="product-description">High-quality rental product.</p>
-            <div class="price">Price: CHF10/day</div>
+            <div class="price">Price: CHF 10/day</div>
             <div class="uses">Utilizzi: 1</div>
             <a href="product1.html" class="rent-button">Rent Now</a>
         </div>
         <div class="product-box">
-            <img src="icon2.png" alt="Product 2" class="product-icon">
+            <img src="icon2.png" alt="Reliable and affordable product" class="product-icon">
             <h2>Product 2</h2>
             <p class="product-description">Reliable and affordable.</p>
-            <div class="price">Price: CHF15/day</div>
+            <div class="price">Price: CHF 15/day</div>
             <div class="uses">Utilizzi: 1</div>
             <a href="product2.html" class="rent-button">Rent Now</a>
         </div>
         <div class="product-box">
-            <img src="icon3.png" alt="Product 3" class="product-icon">
+            <img src="icon3.png" alt="Perfect for your needs" class="product-icon">
             <h2>Product 3</h2>
             <p class="product-description">Perfect for your needs.</p>
-            <div class="price">Price: CHF20/day</div>
+            <div class="price">Price: CHF 20/day</div>
             <div class="uses">Utilizzi: 1</div>
             <a href="product3.html" class="rent-button">Rent Now</a>
         </div>
         <div class="product-box">
-            <img src="icon4.png" alt="Product 4" class="product-icon">
+            <img src="icon4.png" alt="Great value and service" class="product-icon">
             <h2>Product 4</h2>
             <p class="product-description">Great value and service.</p>
-            <div class="price">Price: CHF25/day</div>
+            <div class="price">Price: CHF 25/day</div>
             <div class="uses">Utilizzi: 1</div>
             <a href="product4.html" class="rent-button">Rent Now</a>
         </div>
@@ -75,3 +75,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
